nes-systests/systest/tests/testdata/errors/result/ExpectedIsSubsetOfResult.dummy
CREATE LOGICAL SOURCE stream(id UINT64);
CREATE PHYSICAL SOURCE FOR stream TYPE File;
ATTACH INLINE
1
2

CREATE SINK CORRECT_SINK(stream.id UINT64)  TYPE File;
SELECT id FROM stream INTO CORRECT_SINK;
----
1
2

CREATE SINK INCORRECT_SINK(stream.id
 UINT64)  TYPE File;
SELECT id FROM stream INTO INCORRECT_SINK;
----
1
1
